public/stylesheets/site/2.0/07-interactions.css
/* ... */
fieldset dl, fieldset.actions, fieldset dl fieldset dl {
  background: transparent;
  border: none;
  clear: right;
    box-shadow: none;
}

fieldset fieldset, fieldset dl dl, form blockquote.userstuff {
  background: #fff;
  clear: right;
}

fieldset dd dl, form .meta dd, fieldset dl fieldset dl, dd fieldset {
  margin: 0.643em 0;
}

/* end nesting */

legend {
  height: 0;
  width: 0;
  font-size: 0;
  opacity: 0;
  padding: 0;
  margin: 0;
}

input[type="hidden"] {
  display: none !important;
}

label {
  margin-right: 0.375em;
}

input, textarea {
  font: 100% 'Lucida Grande', 'Lucida Sans Unicode', Verdana, Helvetica, sans-serif, 'GNU Unifont';
  width: 100%;
  border: 1px solid #bbb;
    box-shadow: inset 0 1px 2px #ccc;
}

textarea {
  min-height: 12em;
}

textarea.large {
  height: 36em;
}

input:focus, select:focus, textarea:focus {
  background: #f3efec;
}

input[type="radio"] + label, input[type="checkbox"] + label {
  padding-left: 1em;
}

select {
  vertical-align: text-top;
  width: 100%;
  min-width: 10.5em;
}

.datetime select {
  width: 32.5%;
}

input[type="checkbox"], input[type="radio"] {
    box-shadow: none;
}

input[type="checkbox"], input[type="file"], input[type="radio"], input.number, p input, p select, .heading select, li select {
  width: auto;
  margin-right: 0.375em;
}

input.number {
  width: 4em;
}

option, .actions option, form code {
  display: block;
}

form p {
  clear: right;
  margin: auto;
  padding: 0.643em;
}

form dt {
  float: left;
  clear: left;
  min-width: 10.5em;
  width: 25%;
  padding: 0.25em 0.5625em 0 0;
  border-bottom: 1px solid #f3efec;
}

form dd, form dd.any {
  float: left;
  width: 72.5%;
}

form dd.any {
  margin-left: 25%;
}

form dd + dd {
  width: 97.5%;
  margin-left: 0.5625em;
}

form dd.required {
  color: #2a2a2a;
}

form .footnote code {
  display: inline;
}

/* when we display information that cannot be edited,
like the current username on the change username form
*/
form dd p.informational {
  padding-top: 0;
}

/* END FORM RULES */

/* WIDGET: DEPENDENT OPTIONS */
.toggle_formfield ~ ul.dependent {
  margin-left: 2.625em;
}

/* WIDGET: CHARACTER COUNTER (todo: ARIA live region POLITE) */

p.character_counter {
  font-size: 87.5%;
  text-align: right;
}

.comment .character_counter {
  float: left;
}

/* WIDGET: LIVE VALIDATION (todo: ARIA live region)
We only use error messages for LiveValidation. Style spoofs the system error message. If we ever set a default success message, this will need updating.
*/

.LV_validation_message {
  font-weight: 900;
  position: absolute;
  margin-top: 0.643em;
  margin-right: 15em;
  z-index: 1;
}

.LV_invalid {
  background: #efd1d1;
  border: 1px solid #900;
  color: #900;
  padding: 0.25em 0.375em;
    box-shadow: 1px 1px 2px;
    border-radius: 0.25em;
}

.LV_invalid_field, input.LV_invalid_field:hover, input.LV_invalid_field:active, textarea.LV_invalid_field:hover, textarea.LV_invalid_field:active {
  border: 1px solid #c00;
}

.LV_invalid:before {
  border-color: #900 transparent;
  border-style: solid;
  border-width: 0 0.643em 0.643em;
  content: "";
  left: 0.875em;
  position: absolute;
  top: -0.643em;
}

/* WIDGET: AUTO COMPLETE */

.autocomplete div.dropdown ul {
  background: #fff;
  border: 1px solid #eee;
  padding: 0.125em;
  line-height: 1.286;
  color: #000;
  display: block;
    background: rgba(255, 255, 255, 0.9);
    box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.5);
}

.autocomplete ul li {
  padding: 0.125em;
  margin: 0.25em auto auto;
}

.autocomplete input, .autocomplete .dropdown ul li {
  display: block;
  min-width: 10em;
}

.autocomplete .dropdown ul li {
  margin: 0.25em 0 0;
}

form li ul.autocomplete li.input {
  border: 0;
}

.autocomplete .dropdown ul li:hover, .autocomplete .dropdown li.selected {
  background: url("/images/skins/textures/tiles/red-ao3.png") top left #900;
  color: #fff;
}

.required .autocomplete, .autocomplete .notice {
  color: #2a2a2a;
}

.autocomplete .notice {
  margin-top: 0 !important;
}

.autocomplete li.added, .post .meta dd ul li.added {
  display: inline-block;
}

/* WIDGET: SORTABLE LIST (note: hope to merge with .sortable and .draggable etc) */

.ui-sortable li {
  background: #eee;
  border: 2px solid #ddd;
  float: left;
  width: 100%;
  clear: both;
    box-shadow: 1px 1px 3px transparent;
}

.ui-sortable li:hover {
  background: #ddd;
  border: 2px solid #999;
  cursor: move;
    box-shadow: 1px 1px 3px #bbb;
}

.ui-sortable input {
  margin: 0.429em 0 0.25em 0.25em;
}

.ui-sortable .heading {
  display: inline-block;
}

.ui-sortable ul.actions li {
  float: none;
  background: transparent;
  border: none;
}

.ui-draggable form {
  cursor: move;
    box-shadow: 0 0 3px #555;
}

.ui-draggable a {
  cursor: default;
}

/* WIDGET: DATEPICKER, TIMEPICKER (todo, requires ARIA managed focus) */

#ui-datepicker-div {
  background: #fff;
  display: none;
  overflow: hidden;
  padding: 0.643em;
  font-size: 87.5%;
    box-shadow: 3px 3px 5px;
}

.ui-datepicker dt, .ui-datepicker dd, .ui-datepicker-buttonpane, .ui-timepicker-div, a.ui-datepicker-prev {
  float: left;
}

.ui-datepicker button {
  height: 2em;
}

.ui-datepicker dt {
  clear: left;
  width: 5em;
  margin: 0.25em 0;
}

.ui-datepicker dd {
  margin: 0.25em 0;
}

.ui-datepicker table {
  background: #eee;
}

.ui-datepicker td {
  border: 1px solid #aaa;
}

.ui-datepicker tr:hover {
  background: #ddd;
}

.ui-datepicker td:hover {
  background: #fff;
}

.ui-datepicker td a {
  border-bottom: none;
}

a.ui-datepicker-next {
  float: right;
}

.ui-datepicker-title {
  clear: both;
  text-align: center;
}

.ui-datepicker-buttonpane {
  clear: left;
}

.ui-timepicker-div dl {
  float: left;
  margin: 0.643em 0;
}

.ui_tpicker_hour_label, .ui_tpicker_minute_label {
  padding-top: 0.25em;
  height: 1.45em;
}
/* ... */

